traefik/cluster2/dashboard-ingress-route.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-ingressroute
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd-cluster2-traefik.digitalservice.id`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
      kind: Rule
      services:
      - name: api@internal
        kind: TraefikService
  tls:
    certResolver: letsencrypt
